# Example-CLI

./: README.md  pyproject.toml
example/: greeter.py
