[tool.poetry]
name = "example"
version = "0.1.0"
description = "Example of how to create a Typer CLI with --version command"
authors = ["Peter Sulcs"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[tool.poetry.scripts]
greeter = "example.greeter:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
