[tool.poetry]
authors = ["Peter Sulcs"]
description = "Example of how to create a Typer CLI with --version command"
name = "example"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[tool.poetry.scripts]
greeter = "example.greeter:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
''' 
line-length = 99 # override black's default line-length

[tool.isort]
# make it compatible with black
profile = "black"
